--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~3.1.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-bootstrap": "^1.1.16",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
