--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "angular2-jwt": "^0.1.26",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ng2-bootstrap": "^1.1.16",
