--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ng2-bootstrap": "^1.1.16",
+    "ng2-sharebuttons": "^1.1.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.26"
   },
