--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "ng2-bootstrap": "^1.1.16",
     "ng2-sharebuttons": "^1.1.1",
+    "primeng": "^1.1.2",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.26"
   },
@@ -47,7 +48,7 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "~2.0.3",
+    "typescript": "2.0.10",
     "webdriver-manager": "10.2.5"
   }
 }
