--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -25,6 +25,7 @@
     "angular2-mdl": "^2.11.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng2-bootstrap": "^1.1.16",
     "ng2-sharebuttons": "^1.1.1",
