--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng2-bootstrap": "^1.1.16",
+    "ng2-material-select": "^0.1.4",
     "ng2-sharebuttons": "^1.1.1",
     "primeng": "^1.1.2",
     "ts-helpers": "^1.1.1",
