--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,10 +23,11 @@
     "@angular/router": "~3.4.0",
     "angular2-jwt": "^0.1.26",
     "angular2-mdl": "^2.11.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.1.16",
     "ng2-ckeditor": "^1.1.5",
     "ng2-material-select": "^0.1.4",
