--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "mysql2": "^1.1.1",
     "q": "^1.4.1",
