--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}\\app.ts",
+            "program": "${workspaceRoot}\\backEnd\\app.js",
             "cwd": "${workspaceRoot}",
             "outFiles": [],
             "sourceMaps": true
