--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -9,6 +9,8 @@
     "JSONStream": "^1.3.0",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
+    "config": "^1.25.1",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.1",
     "debug": "~2.2.0",
@@ -17,6 +19,8 @@
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "mysql2": "^1.1.1",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0",
     "q": "^1.4.1",
     "request": "^2.79.0",
     "search-index": "^0.9.11",
