--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,15 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "angular2-jwt": "^0.1.26",
     "angular2-mdl": "^2.11.0",
     "bootstrap": "3.3.7",
@@ -30,15 +33,15 @@
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.1.16",
     "ng2-ckeditor": "^1.1.5",
-    "ng2-material-select": "^0.1.4",
     "ng2-pagination": "^1.0.1",
     "ng2-sharebuttons": "^1.1.1",
     "primeng": "^1.1.4",
     "ts-helpers": "^1.1.1",
+    "typescript": "^2.2.1",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.1",
+    "@angular/cli": "^1.0.0",
     "@types/jasmine": "^2.2.30",
     "@types/jquery": "^2.0.34",
     "@types/node": "^6.0.42",
