--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -33,6 +33,7 @@
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.1.16",
     "ng2-ckeditor": "^1.1.5",
+    "ng2-img-cropper": "^0.8.1",
     "ng2-pagination": "^1.0.1",
     "ng2-sharebuttons": "^1.1.1",
     "primeng": "^1.1.4",
@@ -44,7 +45,7 @@
     "@angular/cli": "^1.0.0",
     "@types/jasmine": "^2.2.30",
     "@types/jquery": "^2.0.34",
-    "@types/node": "^6.0.42",
+    "@types/node": "^6.0.66",
     "codelyzer": "1.0.0-beta.1",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
