--- a/frontEnd/src/tsconfig.json
+++ b/frontEnd/src/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
+    "lib": ["es6", "dom", "es2015.promise"],
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
