--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/dotenv": "^2.0.20",
     "angular2-jwt": "^0.1.26",
     "angular2-mdl": "^2.11.0",
     "bootstrap": "3.3.7",
     "core-js": "^2.4.1",
+    "dotenv": "^4.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.1.1",
