--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "JSONStream": "^1.3.0",
@@ -23,7 +23,6 @@
     "passport-auth0": "^0.6.0",
     "q": "^1.4.1",
     "request": "^2.79.0",
-    "search-index": "^0.9.11",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.7.3",
     "stream": "0.0.2",
