--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -39,6 +39,7 @@
     "ng2-bootstrap": "^1.1.16",
     "ng2-ckeditor": "^1.1.5",
     "ng2-img-cropper": "^0.8.1",
+    "ng2-order-pipe": "^0.1.4",
     "ng2-pagination": "^1.0.1",
     "ng2-sharebuttons": "^1.1.1",
     "primeng": "^1.1.4",
