--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/dotenv": "^2.0.20",
+    "angular2-infinite-scroll": "^0.3.5",
     "angular2-jwt": "^0.1.26",
     "angular2-mdl": "^2.11.0",
     "angular2-mentions": "^0.4.4",
