--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -29,6 +29,7 @@
     "angular2-jwt": "^0.1.26",
     "angular2-mdl": "^2.11.0",
     "angular2-mentions": "^0.4.4",
+    "angular2-moment": "^1.3.3",
     "angular2-useful-swiper": "^4.0.3",
     "aws-sdk": "^2.41.0",
     "bootstrap": "3.3.7",
