Share button and scroll to comment

--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -43,8 +43,10 @@
     "ng2-img-cropper": "^0.8.1",
     "ng2-order-pipe": "^0.1.4",
     "ng2-pagination": "^1.0.1",
+    "ng2-scroll-to": "^1.0.7",
     "ng2-sharebuttons": "^1.1.1",
     "ng2-tag-input": "^1.2.8",
+    "ngx-sharebuttons": "^3.0.0",
     "primeng": "^1.1.4",
     "socket.io": "^1.7.3",
     "ts-helpers": "^1.1.1",
