Update landing ui

--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -42,12 +42,13 @@
     "ng2-ckeditor": "^1.1.5",
     "ng2-img-cropper": "^0.8.8",
     "ng2-order-pipe": "^0.1.4",
+    "ng2-page-scroll": "^4.0.0-beta.8",
     "ng2-pagination": "^1.0.1",
     "ng2-scroll-to": "^1.0.7",
     "ng2-sharebuttons": "^1.1.1",
-    "primeng": "^4.0.1",
     "ng2-tag-input": "^1.2.8",
     "ngx-sharebuttons": "^3.0.0",
+    "primeng": "^4.0.1",
     "socket.io": "^1.7.3",
     "ts-helpers": "^1.1.1",
     "typescript": "^2.2.1",
