--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "gravatar": "^1.6.0",
     "jade": "~1.11.0",
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
